--- a/island_life.html
+++ b/island_life.html
@@ -17,7 +17,7 @@
     <div class="first-column">
         <!--HEADER-->
         <header>
-            <a href="indexNew.html">
+            <a href="index.html">
                 <h1 class="site-title">
                     <i>Archie</i> Hanafi
                 </h1> 
