--- a/island_life.html
+++ b/island_life.html
@@ -51,9 +51,21 @@
         <div class="content">
     
             <div class="image-container">
-                <img class="image"
-                src="image/island_life/polina.jpg">
-            
+                <img class="mySlides" src="image/island_life/polina.jpg">
+                <img class="mySlides" src="image/island_life/thaikila8.jpg">
+                <img class="mySlides" src="image/island_life/astrid3.jpg">
+                <img class="mySlides" src="image/island_life/skye.jpg">
+                <img class="mySlides" src="image/island_life/tann.jpg">
+                <img class="mySlides" src="image/island_life/lip2.jpg">
+                <img class="mySlides" src="image/island_life/laura.jpg">
+                <img class="mySlides" src="image/island_life/scampi5.jpg">
+                <img class="mySlides" src="image/island_life/balquisse2.jpg">
+                <img class="mySlides" src="image/island_life/thaikila1.jpg">
+                <img class="mySlides" src="image/island_life/mvm1.jpg">
+                <img class="mySlides" src="image/island_life/scampi1.jpg">
+                <img class="mySlides" src="image/island_life/mvm2.jpg">
+                <img class="mySlides" src="image/island_life/alyona.jpg">
+                <img class="mySlides" src="image/island_life/mashakost.jpg">
             </div>
         </div>
 
@@ -65,9 +77,11 @@
         <!--BUTTON-->
         <div class="btn-container">
             <img class="prevButton"
+            onclick="plusDivs(-1)"
             src="image/icons8-back-100.png">
-            <p><span class="number">1</span>/15</p>
+            <p><span class="number">1</span>/14</p>
             <img class="nextButton"
+            onclick="plusDivs(+1)"
             src="image/icons8-forward-100.png">
         </div>
 
