--- a/island_life.html
+++ b/island_life.html
@@ -25,11 +25,11 @@
     <div class="navigation">
         <!--MENU-->
         <nav>
-            <a class="active">FASHION</a>
+            <a class="inactive">FASHION</a>
             <a href="redefining_femininity.html"
             class="inactive">REDEFINING FEMININITY</a>
             <a href="island_life.html"
-            class="inactive">ISLAND LIFE</a>
+            class="active">ISLAND LIFE</a>
         </nav>
         <!--SOCIAL MEDIA-->
         <div class="socialmedia-container">
