--- a/redefining_femininity.html
+++ b/redefining_femininity.html
@@ -25,9 +25,9 @@
     <div class="navigation">
         <!--MENU-->
         <nav>
-            <a class="active">FASHION</a>
+            <a class="inactive">FASHION</a>
             <a href="redefining_femininity.html"
-            class="inactive">REDEFINING FEMININITY</a>
+            class="active">REDEFINING FEMININITY</a>
             <a href="island_life.html"
             class="inactive">ISLAND LIFE</a>
         </nav>
