--- a/fashion.html
+++ b/fashion.html
@@ -25,7 +25,8 @@
     <div class="navigation">
         <!--MENU-->
         <nav>
-            <a class="active">FASHION</a>
+            <a href="#"
+            class="active">FASHION</a>
             <a href="redefining_femininity.html"
             class="inactive">REDEFINING FEMININITY</a>
             <a href="island_life.html"
