--- a/island_life.html
+++ b/island_life.html
@@ -25,10 +25,11 @@
     <div class="navigation">
         <!--MENU-->
         <nav>
-            <a class="inactive">FASHION</a>
+            <a href="fashion.html"
+            class="inactive">FASHION</a>
             <a href="redefining_femininity.html"
             class="inactive">REDEFINING FEMININITY</a>
-            <a href="island_life.html"
+            <a href="#"
             class="active">ISLAND LIFE</a>
         </nav>
         <!--SOCIAL MEDIA-->
