--- a/redefining_femininity.html
+++ b/redefining_femininity.html
@@ -25,8 +25,9 @@
     <div class="navigation">
         <!--MENU-->
         <nav>
-            <a class="inactive">FASHION</a>
-            <a href="redefining_femininity.html"
+            <a href="fashion.html"
+            class="inactive">FASHION</a>
+            <a href="#"
             class="active">REDEFINING FEMININITY</a>
             <a href="island_life.html"
             class="inactive">ISLAND LIFE</a>
