--- a/fashion.html
+++ b/fashion.html
@@ -56,19 +56,19 @@
                 <img src="image/fashion/phoenix.jpg">
             </div>
             <div class="slide">
-                <img src="image/fashion/alize.jpg">
+                <img src="image/fashion/lydia.jpg">
             </div>
             <div class="slide">
                 <img src="image/fashion/rebelmag1.jpg">
             </div>
-            <div class="slide landscape">
+            <div class="slide">
                 <img src="image/fashion/rebelmag2.jpg">
             </div>
             <div class="slide">
-                <img src="image/fashion/mckenna1.jpg">
+                <img src="image/fashion/tina.jpg">
             </div>
             <div class="slide">
-                <img src="image/fashion/mckenna2.jpg">
+                <img src="image/fashion/mckenna.jpg">
             </div>
             <div class="slide">
                 <img src="image/fashion/ellie1.jpg">
@@ -107,7 +107,7 @@
                 <img src="image/fashion/sharonmarlisa.jpg">
             </div>
             <div class="slide">
-                <img src="image/fashion/valery.jpg">
+                <img src="image/fashion/alize.jpg">
             </div>     
         </div>
         <!--END OF SLIDER CONTAINER-->
