--- a/fashion.html
+++ b/fashion.html
@@ -62,10 +62,10 @@
                 <img src="image/fashion/rebelmag1.jpg">
             </div>
             <div class="slide">
-                <img src="image/fashion/rebelmag2.jpg">
+                <img src="image/fashion/tina.jpg">
             </div>
             <div class="slide">
-                <img src="image/fashion/tina.jpg">
+                <img src="image/fashion/lizzy.jpg">
             </div>
             <div class="slide">
                 <img src="image/fashion/mckenna.jpg">
@@ -74,16 +74,10 @@
                 <img src="image/fashion/ellie1.jpg">
             </div>
             <div class="slide">
-                <img src="image/fashion/ellie2.jpg">
-            </div>
-            <div class="slide">
                 <img src="image/fashion/simone.jpg">
             </div>
             <div class="slide">
                 <img src="image/fashion/inez3.jpg">
-            </div>
-            <div class="slide">
-                <img src="image/fashion/inez2.jpg">
             </div>
             <div class="slide">
                 <img src="image/fashion/denyaphoenix.jpg">
