--- a/fashion.html
+++ b/fashion.html
@@ -56,7 +56,7 @@
                 <img src="image/fashion/phoenix.jpg">
             </div>
             <div class="slide">
-                <img src="image/fashion/lydia.jpg">
+                <img src="image/fashion/lydia1.jpg">
             </div>
             <div class="slide">
                 <img src="image/fashion/lizzy.jpg">
